Changes from version 0.14 to version 0.15
colgraph.gi  - added new method for Adjacency matrix
	     - Corrected DirectProductColorGraph
	     - added new constructor BIKColorGraph
colgraph.gd  - added Synonyms IsIsomorphicColorGraph, IsomorphismColorGraphs,
                              IsIsomorphismOfColorGraphs, IsAutomorphismOfColorGraph,
			      VertexNamesOfColorGraph
tensor.gi    - added Method for \[\] to support the syntax T[i,j,k]
tensor.gd    - added Synonyms IsIsomorphicTensor, IsomorphismTensors,
                              IsIsomorphismOfTensors, IsAutomorphismOfTensor,
			      VertexNamesOfTensor

Changes from version 0.13 to version 0.14
tensor.gi    - corrected DenseTensorFromEntries
             - created PbagBuildObject for general tensors
coco.xml     - changed name from DenseTensorOfEntries to DenseTensorFromEntries



Changes from version 0.12 to version 0.13
schemesdb.gi - Updated the address of the Japanese catalogue
	     - created new function TensorFromColorReps that creates a blocked tensor 
	       only if the given cgr has more than one fibre; otherwise a more 
               efficient dense tenor is created
	made coco2p independent from the setorbit package
 

Changes from version 0.11 to version 0.12

goodsets.gi  - Added ViewObject method for good sets
	     - in method SubOrbitsWithInvariantPropertyOfCocoOrbit
	       the test is applied now only to the canonical representatives
	       of suborbits; thus, every given test-function gets made artificially
	       invariant (even if it is not constant on orbits)
	       This fixes a bug in the algorithm for the computation of homogeneous fusions,
	       that used a test function that was not invariant (but expected to be used on
	       canonical representatives
fusion.gi    - fixed a bug where fusion orbits were created with wrong stabilizers
	       this resulted in a wrong size-information



Changes from version 0.1 to version 0.11
